fix: Adicionar pandas às dependências do workflow

--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -24,7 +24,7 @@ jobs:
       
       - name: 📦 Instalar Dependências
         run: |
-          pip install requests sqlalchemy python-dateutil
+          pip install requests sqlalchemy python-dateutil pandas
       
       - name: 🔄 Executar Sincronização
         env:
