--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -20,11 +20,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-          cache: 'pip'
       
       - name: 📦 Instalar Dependências
         run: |
-          pip install requests sqlalchemy python-dateutil pandas
+          pip install --no-cache-dir requests sqlalchemy python-dateutil pandas numpy
       
       - name: 🔄 Executar Sincronização
         env:
